--- a/static/css/humanresource/member_efficiency.css
+++ b/static/css/humanresource/member_efficiency.css
@@ -627,3 +627,78 @@
 }
 
 /* 번호, 등급, 이름, 팀, 급여, 목표운행량, 매출액, KM, 시간, 유류비, 공차, 최초 고용일, 근무형태 */
+
+/* MARK: Pop Up */
+.pop-up-bg-container {
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+
+    position: absolute;
+    top:0;
+    left: 0;
+    display: none;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+}
+
+.pop-up-container {
+    width: 90%;
+    height: 90%;
+    background-color: white;
+
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.pop-up-container .title-container {
+    width: 95%;
+    height: 8%;
+    background-color: white;
+    
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+
+    border-bottom: 1px solid #838383;
+}
+
+.title-div #title-first-child {
+    font-weight: 400;
+    font-size: 1.8rem;
+}
+
+.title-div #title-second-child {
+    font-weight: 500;
+    font-size: 2.5rem;
+    margin-left: 0.5rem;
+}
+
+.pop-up-container .content-container {
+    width: 95%;
+    height: 85%;
+    background-color: antiquewhite;
+
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+}
+
+.report-container {
+    height: 100%;
+    width: 65%;
+    background-color: red;
+    overflow: auto;
+
+}
+
+.button-container {
+    height: 100%;
+    width: 30%;
+    background-color: blue;
+    
+}
