--- a/templates/base.html
+++ b/templates/base.html
@@ -82,6 +82,9 @@
                 <a href="{% url 'dispatch:regularly_route' %}" class="sideMenuNav2Link">
                   <li class="sideMenuNav2Menu">출/퇴근 노선관리</li>
                 </a>
+                <a href="{% url 'dispatch:regularly_station' %}" class="sideMenuNav2Link">
+                  <li class="sideMenuNav2Menu">정류장관리</li>
+                </a>
                 <a href="{% url 'dispatch:regularly_route_know' %}" class="sideMenuNav2Link">
                   <li class="sideMenuNav2Menu">출/퇴근 노선숙지</li>
                 </a>
