--- a/dispatch/templates/dispatch/regularly_station.html
+++ b/dispatch/templates/dispatch/regularly_station.html
@@ -52,6 +52,7 @@
                     <td>위도</td>
                     <td>경도</td>
                     <td>참조사항</td>
+                    <td>종류</td>
                 </tr>
             </thead>
             <tbody>
@@ -66,6 +67,7 @@
                     <td>{{station.latitude}}</td>
                     <td>{{station.longitude}}</td>
                     <td>{{station.references}}</td>
+                    <td>{{station.types}}</td>
                 </tr>
                 {% endfor %}
                 <tr class="blanckTr"></tr>
@@ -120,10 +122,26 @@
                         <input autocomplete="off" name="longitude" type="text" class="essential popupArticleinput length100 popupLongitude">
                     </div>
                 </div>
-                <div class="popupArticleBox">
+                <div class="popupArticleBox popupArticleBoxLast">
                     <div class="popupArticleDouble">
                         <label for="" class="popupArticleLabel">참조사항</label>
                         <input autocomplete="off" name="references" type="text" class="popupArticleinput length100 popupReferences">
+                    </div>
+                    <div class="popupArticleDoubleDiv">
+                        <div class="popupArticleDouble popupArticleDoubleSelectDiv">
+                            <label for="" class="popupArticleLabel">종류</label>
+                            <select id="multipleSelect" name="references" class="popupArticleinput length100 popupReferences">
+                                <option value=""></option>
+                                <option value="1">1</option>
+                                <option value="2">2</option>
+                                <option value="3">3</option>
+                                <option value="A">A</option>
+                                <option value="B">B</option>
+                                <option value="C">C</option>
+                            </select>
+                        </div>
+                        <div class="selectedTextDiv">
+                        </div>
                     </div>
                 </div>
                 
